--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.10.1",
+    "@sweetalert2/themes": "^5.0.5",
     "bootstrap": "^5.1.1",
     "core-js": "^3.6.5",
+    "sweetalert2": "^11.1.7",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
