--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@popperjs/core": "^2.10.1",
     "@sweetalert2/themes": "^5.0.5",
     "bootstrap": "^5.1.1",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
     "sweetalert2": "^11.1.7",
     "vue": "^3.0.0",
