fix: docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,5 +4,6 @@ services:
   mongo:
     image: mongo    
     environment:
+      MONGO_INITDB_DATABASE: mevn-practice
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
